infra/config/longhorn/Gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn
  namespace: longhorn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: longhorn.k8sdev.cloud
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTPS
    port: 443
    name: longhorn-https
    hostname: longhorn.k8sdev.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: longhorn-tls
    allowedRoutes:
      namespaces:
        from: Same
