infra/config/longhorn/HTTPRoute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn
spec:
  parentRefs:
  - name: longhorn
    namespace: longhorn
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
  hostnames:
  - longhorn.k8sdev.cloud
